--- a/public/css/basic.css
+++ b/public/css/basic.css
@@ -4,11 +4,11 @@
 
 body {
     margin: 0;
-    padding: 0;
+    padding: 150px 0;
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
 
