--- a/public/css/basic.css
+++ b/public/css/basic.css
@@ -8,7 +8,7 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -27,4 +27,15 @@ li {
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
     padding: 0;
+}
+
+a,
+a:hover {
+    text-decoration: none;
+}
+
+main.content {
+    padding: 10px 25px;
+    width: 100%;
+    max-width: 1440px;
 }
