--- a/public/css/basic.css
+++ b/public/css/basic.css
@@ -4,8 +4,8 @@
 
 body {
     margin: 0;
-    padding: 150px 0;
     height: 100vh;
+    padding: 150px 0 0 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -38,4 +38,6 @@ main.content {
     padding: 10px 25px;
     width: 100%;
     max-width: 1440px;
+    text-align: center;
 }
+
