--- a/public/css/cabinet.css
+++ b/public/css/cabinet.css
@@ -3,7 +3,7 @@
     overflow: hidden;
 }
 
-.personal_info .fa-user {
+.personal_info-bg {
     position: absolute;
     right: 0;
     bottom: -20px;
@@ -21,6 +21,44 @@
     padding: 5px 10px;
 }
 
-button:hover .fa-eye {
+a:hover .fa-eye {
     color: royalblue;
+}
+
+#deleteAccount.disabled {
+    filter: grayscale(50);
+}
+
+.all_users table * {
+    border: none;
+}
+
+.all_users table td {
+    padding: 10px 15px;
+}
+
+.all_users table tr:hover {
+    cursor: default;
+    color: #eee;
+}
+
+.deleteUser:hover i {
+    color: red !important;
+}
+
+.demoteUser:hover i {
+    color: orange !important;
+}
+
+.empowermentUser:hover i {
+    color: green !important;
+}
+
+.userCabinet:hover i {
+    color: royalblue !important;
+}
+
+.demoteUser,
+.empowermentUser {
+    font-size: 20px;
 }
